Ensure navigation is always centered on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -59,3 +59,8 @@ footer {
 .mat-drawer.mat-drawer-opened.mat-drawer-opened {
   width: 100% !important;
 }
+
+app-navigation {
+  display: flex !important;
+  justify-content: center !important;
+}
