--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
-    padding-left: 2rem;
     position: fixed;
   }
   &-navbar {
